--- a/DesAperto_1/package.json
+++ b/DesAperto_1/package.json
@@ -11,6 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "consign": "^0.1.6",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.7",
+    "nodemon": "^1.19.4",
     "react": "16.9.0",
     "react-native": "0.61.3",
     "react-navigation": "^2.18.3"
