--- a/DesAperto_1/package.json
+++ b/DesAperto_1/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.19.4",
     "react": "16.9.0",
     "react-native": "0.61.3",
+    "react-native-firebase": "^5.5.6",
     "react-navigation": "^2.18.3"
   },
   "devDependencies": {
