--- a/DesAperto_1/android/app/build.gradle
+++ b/DesAperto_1/android/app/build.gradle
@@ -179,16 +179,15 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:23.0.1"
     implementation project(':react-native-firebase')
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:appcompat-v7:23.0.1"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
 
-    // Firebase dependencies OBS: tirei pois estava quebrando o projeto
-    /*implementation "com.google.android.gms:play-services-base:11.6.0"
-    implementation "com.google.firebase:firebase-core.17.0.0"*/
-    implementation "com.google.firebase:firebase-auth.18.0.0"
+    // Firebase dependencies
+    implementation "com.google.android.gms:play-services-base:17.1.0"
+    implementation "com.google.firebase:firebase-auth:19.1.0"
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
