--- a/DesAperto_1/android/app/build.gradle
+++ b/DesAperto_1/android/app/build.gradle
@@ -179,6 +179,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-permissions')
+    implementation project(':react-native-camera')
     implementation project(':react-native-firebase')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:23.0.1"
