--- a/DesAperto_1/android/app/src/main/AndroidManifest.xml
+++ b/DesAperto_1/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,6 @@
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
-
+    <!-- PERMISSÃO PARA USAR A CAMERA-->
+    <uses-permission android:name="android.permission.CAMERA" />
 </manifest>
