--- a/DesAperto_1/package.json
+++ b/DesAperto_1/package.json
@@ -20,7 +20,10 @@
     "nodemon": "^1.19.4",
     "react": "16.9.0",
     "react-native": "0.61.3",
+    "react-native-camera": "^3.9.0",
     "react-native-firebase": "^5.5.6",
+    "react-native-permissions": "^2.0.3",
+    "react-native-qrcode-scanner": "^1.2.3",
     "react-navigation": "^2.18.3"
   },
   "devDependencies": {
