--- a/DesAperto_1/package.json
+++ b/DesAperto_1/package.json
@@ -24,6 +24,7 @@
     "react-native-firebase": "^5.5.6",
     "react-native-permissions": "^2.0.3",
     "react-native-qrcode-scanner": "^1.2.3",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^2.18.3"
   },
   "devDependencies": {
