--- a/DesAperto_1/package.json
+++ b/DesAperto_1/package.json
@@ -22,10 +22,11 @@
     "react-native": "0.61.3",
     "react-native-camera": "^3.9.0",
     "react-native-firebase": "^5.5.6",
+    "react-native-gesture-handler": "^1.5.0",
     "react-native-permissions": "^2.0.3",
     "react-native-qrcode-scanner": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^2.18.3"
+    "react-navigation": "^3.13.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
@@ -33,6 +34,7 @@
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.9.0",
     "eslint": "6.6.0",
+    "eslint-plugin-react": "^7.16.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.9.0"
